[gd_scene load_steps=2 format=3 uid="uid://cbdocet1q40y5"]

[ext_resource type="Script" path="res://scripts/Day1Controller.gd" id="1"]

[node name="Day1Root" type="Node2D"]
script = ExtResource("1")

[node name="Puzzle1Button" type="Button" parent="."]
offset_top = 80.0
offset_right = 71.0
offset_bottom = 111.0
text = "Puzzle 1"

[node name="Puzzle1AnswerLabel" type="Label" parent="."]
offset_left = 100.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 103.0

[node name="Puzzle2Button" type="Button" parent="."]
offset_top = 160.0
offset_right = 71.0
offset_bottom = 191.0
text = "Puzzle 2"

[node name="Puzzle2AnswerLabel" type="Label" parent="."]
offset_left = 100.0
offset_top = 160.0
offset_right = 200.0
offset_bottom = 183.0

[node name="Test1" type="Button" parent="."]
offset_top = 40.0
offset_right = 54.0
offset_bottom = 71.0
text = "Test 1"

[node name="Test1Result" type="Label" parent="."]
offset_left = 100.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 63.0

[node name="Test2" type="Button" parent="."]
offset_top = 120.0
offset_right = 54.0
offset_bottom = 151.0
text = "Test 2"

[node name="Test2Result" type="Label" parent="."]
offset_left = 100.0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 143.0

[connection signal="pressed" from="Puzzle1Button" to="." method="_on_Puzzle1Button_pressed"]
[connection signal="pressed" from="Puzzle2Button" to="." method="_on_Puzzle2Button_pressed"]
[connection signal="pressed" from="Test1" to="." method="_on_Test1_pressed"]
[connection signal="pressed" from="Test2" to="." method="_on_Test2_pressed"]
