[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Day1Controller.gd" type="Script" id=1]

[node name="Day1Root" type="Node2D"]
script = ExtResource( 1 )

[node name="MainMenuButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Main menu"

[node name="Puzzle1Button" type="Button" parent="."]
margin_top = 30.0
margin_right = 12.0
margin_bottom = 50.0
text = "Puzzle 1"

[node name="Puzzle1AnswerLabel" type="Label" parent="."]
margin_left = 100.0
margin_top = 30.0
margin_right = 200.0
margin_bottom = 50.0

[node name="Puzzle2Button" type="Button" parent="."]
margin_top = 60.0
margin_right = 66.0
margin_bottom = 80.0
text = "Puzzle 2"

[node name="Puzzle2AnswerLabel" type="Label" parent="."]
margin_left = 100.0
margin_top = 60.0
margin_right = 200.0
margin_bottom = 80.0

[connection signal="pressed" from="MainMenuButton" to="." method="_on_Mainmenu_Button_pressed"]
[connection signal="pressed" from="Puzzle1Button" to="." method="_on_Puzzle1Button_pressed"]
[connection signal="pressed" from="Puzzle2Button" to="." method="_on_Puzzle2Button_pressed"]
